3.0.0/_sources/gallery/images_contours_and_fields/watermark_image.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_watermark_image.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_watermark_image.py:


===============
Watermark image
===============

Using a PNG file as a watermark.



.. code-block:: python

    import numpy as np
    import matplotlib.cbook as cbook
    import matplotlib.image as image
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    datafile = cbook.get_sample_data('logo2.png', asfileobj=False)
    print('loading %s' % datafile)
    im = image.imread(datafile)
    im[:, :, -1] = 0.5  # set the alpha channel

    fig, ax = plt.subplots()

    ax.plot(np.random.rand(20), '-o', ms=20, lw=2, alpha=0.7, mfc='orange')
    ax.grid()
    fig.figimage(im, 10, 10, zorder=3)

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_watermark_image_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    loading /tmp/mpl_doc_build/lib/python3.7/site-packages/matplotlib/mpl-data/sample_data/logo2.png


------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:



.. code-block:: python


    import matplotlib
    matplotlib.image
    matplotlib.image.imread
    matplotlib.pyplot.imread
    matplotlib.figure.Figure.figimage







.. _sphx_glr_download_gallery_images_contours_and_fields_watermark_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: watermark_image.py <watermark_image.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: watermark_image.ipynb <watermark_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
